--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@babel/plugin-transform-runtime": "^7.18.9",
 		"@babel/preset-env": "^7.1.0",
 		"@babel/preset-react": "^7.0.0",
+		"autoprefixer": "^10.4.8",
 		"babel-loader": "^8.2.3",
 		"concurrently": "^5.0.0",
 		"cross-env": "^6.0.3",
@@ -24,6 +25,7 @@
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
 		"nodemon": "^1.19.4",
+		"postcss-loader": "^7.0.1",
 		"style-loader": "^3.3.1",
 		"webpack": "^5.64.1",
 		"webpack-cli": "^4.9.1",
@@ -33,6 +35,7 @@
 	"dependencies": {
 		"@babel/plugin-transform-async-to-generator": "^7.18.6",
 		"@babel/runtime": "^7.18.9",
+		"@popperjs/core": "^2.11.5",
 		"axios": "^0.27.2",
 		"bootstrap": "^5.2.0",
 		"dotenv": "^16.0.1",
