--- a/package.json
+++ b/package.json
@@ -10,6 +10,29 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "aecubed",
+	"dependencies": {
+		"@babel/plugin-transform-async-to-generator": "^7.18.6",
+		"@babel/runtime": "^7.18.9",
+		"@popperjs/core": "^2.11.5",
+		"assert": "^2.0.0",
+		"axios": "^0.27.2",
+		"bootstrap": "^5.2.0",
+		"dotenv": "^16.0.1",
+		"express": "^4.16.3",
+		"html-to-image": "^1.9.0",
+		"mongodb": "^4.8.1",
+		"mongoose": "^5.11.9",
+		"node-fetch": "^2.3.0",
+		"node-sass": "^7.0.1",
+		"pg": "^8.5.1",
+		"prop-types": "^15.8.1",
+		"react": "^16.5.2",
+		"react-dom": "^16.5.2",
+		"react-hot-loader": "^4.6.3",
+		"react-router": "^4.3.1",
+		"react-router-dom": "^6.3.0",
+		"sass-loader": "^12.3.0"
+	},
 	"devDependencies": {
 		"@babel/core": "^7.1.2",
 		"@babel/plugin-transform-runtime": "^7.18.9",
@@ -32,26 +55,6 @@
 		"webpack-cli": "^4.10.0",
 		"webpack-dev-server": "^4.5.0",
 		"webpack-hot-middleware": "^2.24.3"
-	},
-	"dependencies": {
-		"@babel/plugin-transform-async-to-generator": "^7.18.6",
-		"@babel/runtime": "^7.18.9",
-		"@popperjs/core": "^2.11.5",
-		"axios": "^0.27.2",
-		"bootstrap": "^5.2.0",
-		"dotenv": "^16.0.1",
-		"express": "^4.16.3",
-		"html-to-image": "^1.9.0",
-		"node-fetch": "^2.3.0",
-		"node-sass": "^7.0.1",
-		"pg": "^8.5.1",
-		"prop-types": "^15.8.1",
-		"react": "^16.5.2",
-		"react-dom": "^16.5.2",
-		"react-hot-loader": "^4.6.3",
-		"react-router": "^4.3.1",
-		"react-router-dom": "^6.3.0",
-		"sass-loader": "^12.3.0"
 	},
 	"nodemonConfig": {
 		"ignore": [
